cmake_minimum_required(VERSION 3.0)
project(wxVTKRenderWindowInteractor)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_USE_RELATIVE_PATHS ON)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
set(wxWidgets_CONFIGURATION mswu)
set(wxWidgets_USE_LIBS)

find_package(wxWidgets REQUIRED core base)
include( "${wxWidgets_USE_FILE}" )
add_library(wxVTKRenderWindowInteractor SHARED wxVTKRenderWindowInteractor.cxx)
target_link_libraries(wxVTKRenderWindowInteractor ${VTK_LIBRARIES} ${wxWidgets_LIBRARIES} )

add_executable(MAIN Sample.cpp)
target_link_libraries(MAIN wxVTKRenderWindowInteractor)